--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -18,7 +18,7 @@
 <link rel="apple-touch-icon" href="https://Vinayakrai.netlify.app/icon-2566.png" />
 <link type="text/plain" rel="author" href="https://Vinayakrai.netlify.app/humans.txt" />
 
-<meta property="og:image" content="https://Vinayakrai.netlify.app/social-image.png" />
+<meta property="og:image" content="https://Vinayakrai.netlify.app/social-image1.png" />
 <meta property="og:image:type" content="image/png" />
 <meta property="og:image:width" content="1280" />
 <meta property="og:image:height" content="675" />
@@ -39,6 +39,6 @@
 />
 <meta name="twitter:title" content="Hamish Williams | Storybook" />
 <meta name="twitter:site" content="@hamishMW" />
-<meta name="twitter:image" content="https://Vinayakrai.netlify.app/social-image.png" /> -->
+<meta name="twitter:image" content="https://Vinayakrai.netlify.app/social-image1.png" /> -->
 
 <script src="https://magi.Vinayakrai.netlify.app/script.js" data-site="CJZKJKLA" defer></script>
