--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -4,14 +4,14 @@
   }
 </style>
 
-<title>Vinayak - Portfolio</title>
+<title>Vinayak Rai - Portfolio</title>
 <meta
   name="description"
   content="My custom design component system created from the ground up used in building my portfolio"
 />
 
 <meta name="theme-color" content="#111111" />
-<meta name="author" content="Vinayak" />
+<meta name="author" content="Vinayak Rai" />
 
 <!-- <link rel="manifest" href="https://Vinayakrai.netlify.app/manifest.json" />
 <link rel="shortcut icon" href="https://Vinayakrai.netlify.app/favicon.svg" />
